--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
   = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
 %body
-  -flash.each do |msg|
+  -flash.each do |name, msg|
     =content_tag :div, msg, class: "alert alert-info"
 
   =yield
