--- a/app/views/pics/new.html.haml
+++ b/app/views/pics/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New Post
-
-= render 'form'
-
-= link_to "Back", root_path
+#edit_page.col-md-8.col-md-offset-2
+  .row
+    .panel.panel-default
+      .panel-heading
+        %h1 New Pic
+      .panel-body
+        = render 'form'
