--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
 %body
   %nav.navbar.navbar-inverse
     .container
-      .navbar-brand= link_to "Instagramm", root_path
+      .navbar-brand= link_to "Gram It", root_path
       - if user_signed_in?
         %ul.nav.navbar-nav.navbar-left
           %li= link_to "Gram It!", new_pic_path
